# ai-team-simulation

./: .gitignore  .replit  README.md  app.py  github_integration.py  main.py  populate_repository.py  push_to_github.py  pyproject.toml  requirements.txt  test_github_integration.py
agents/: __init__.py  base_agent.py  business_analyst.py  developer.py  devops.py  project_manager.py  tester.py  ux_designer.py
docs/: README.md
docs/api/: README.md
docs/architecture/: README.md
docs/meetings/: README.md
docs/requirements/: README.md
docs/technical/: README.md
docs/templates/: meeting_notes.md  technical_doc.md
docs/testing/: README.md
docs/user_guides/: README.md
projects/: README.md
projects/stock_trading_ai/: README.md
projects/stock_trading_ai/docs/: README.md
projects/stock_trading_ai/docs/api/: README.md
projects/stock_trading_ai/docs/architecture/: README.md
projects/stock_trading_ai/docs/requirements/: README.md
projects/stock_trading_ai/docs/technical/: README.md
projects/stock_trading_ai/docs/testing/: README.md
projects/stock_trading_ai/docs/user_guides/: README.md
static/css/: custom.css
static/js/: agent_graph.js  main.js
templates/: agent_relationships.html  github_init.html  index.html
